# python-boilerplate

./: .flake8  .pre-commit-config.yaml  .safety-policy.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture_decision.md  bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml  task.md
.github/workflows/: code-quality.yaml
docs/: project-scope.md
docs/adr/: 0001-record-architecture-decisions.md  README.md  template.md
docs/decisions/: 0001-record-architecture-decisions.md  README.md  template.md
src/boilerplate/: __init__.py
src/boilerplate/examples/: __init__.py  classes.py
tests/: __init__.py  conftest.py  ruff.toml
tests/examples/: test_classes.py
tests/unit_tests/: __init__.py  test_classes.py  test_install.py
