[tool.poetry]
authors = ["widal001 <williamdaly422@gmail.com>"]
description = "Boilerplate code for basic python package"
license = "MIT License"
name = "boilerplate"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pylint = "^3.2.2"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

# configures some basic black settings per this article:
# https://ljvmiranda921.github.io/notebook/2018/06/21/precommits-using-black-and-flake8/
[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | env
)/
'''
include = '\.pyi?$'
line-length = 79

[tool.pylint."MESSAGE CONTROL"]
disable = [
  "R0903", # Disables too few public methods
  "R0801", # Disables duplicate code warning
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-safe-fixes = [
  "D400", # docstrings should end with a period
  "D415", # docstrings should end with a period, question mark, or exclamation point
]
ignore = [
  "ANN101", # missing type annotation for self
  "ANN102", # missing type annotation for cls
  "D203", # no blank line before class
  "D212", # multi-line summary first line
  "FA", # flake8-future-annotations ruleset
]
select = ["ALL"]
